Added mobile screen support. V1

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vshop</title>
+    <title>Vshop Armory</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./images/icons/" type="image/svg+xml">
+    <link rel="icon" href="./images/icons/logo.svg" type="image/svg+xml">
   </head>
   <body>
     <header>
