Fixed layout. FInal

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 />
               </a>
               <div class="card-info">
-                <p><a href="">S&W M&P15-22 SPORT</a></p>
+                <p class="card-name"><a href="">S&W M&P15-22 SPORT</a></p>
                 <div class="star">
                   <img
                     src="./images/icons/star-fill.svg"
@@ -189,7 +189,7 @@
                 />
               </a>
               <div class="card-info">
-                <p><a href="">SIG SAUER 716 G2 PATROL</a></p>
+                <p class="card-name"><a href="">SIG SAUER 716 G2 PATROL</a></p>
                 <div class="star">
                   <img
                     src="./images/icons/star-fill.svg"
@@ -235,7 +235,7 @@
                 />
               </a>
               <div class="card-info">
-                <p><a href="">M&P AK47 - CRIMSON TRACE</a></p>
+                <p class="card-name"><a href="">M&P AK47 - CRIMSON TRACE</a></p>
                 <div class="star">
                   <img
                     src="./images/icons/star-fill.svg"
