Added "EMB" watermark to html, css, and js codes.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="author" content="EMB">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vshop Armory</title>
@@ -26,6 +27,7 @@
           </li>
         </ul>
       </nav>
+      <!-- EMB -->
       <span id="sideskirt" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> 
     </header>
     <main>
@@ -102,7 +104,7 @@
               <option value="">
                 Collapsible Stock - Optics Ready (without sights)
               </option>
-              <option value="">Fixed Stock - No Sights</option>
+              <option value="">Fixed Stock - No Sights</option> <!--EMB-->
               <option value="">Fixed Stock - Fixed Iron Sights</option>
               <option value="">Fixed Stock - Flip-Up Iron Sights</option>
               <option value="">
@@ -131,6 +133,7 @@
 
       <section id="recommendation">
         <h2>Similar Products</h2>
+        <!--EMB-->
         <div class="recommend-products">
           <div class="prod-cards">
             <div class="card">
@@ -272,7 +275,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> <!--EMB-->
       </section>
 
       <section id="reviews">
@@ -353,6 +356,7 @@
                 width="50"
                 height="50"
               />
+              <!--EMB-->
             </a>
 
             <div class="review-info">
@@ -388,6 +392,7 @@
                 width="15"
                 height="15"
               />
+              <!--EMB-->
               <img
                 src="./images/icons/star-empty.svg"
                 alt="star"
